Criando menu lateral (sidebar), com estrutura simples de Html, ela só será ativada via javaScript.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
     </style>
   </head>
   <body>
-
+    <div class="container">
+      <!-- Menu Lateral -->
+      <aside class="sidebar">
+        <div class="sidebar-header">
+          <h1>🍲 Banco de Alimentos</h1>
+          <p>Sistema de Gestão</p>
+        </div>
     <script src="src/script/script.js"></script>
   </body>
 </html>
