Implementando o Supabase, reestruturando a estrutua de pastas

--- a/public/index.html
+++ b/public/index.html
@@ -917,8 +917,11 @@
       </main>
     </div>
 </main>
+
+<!-- Database SupaBase -->
+ <script type="module" src="../src/api/supabase.js"></script>
     <!-- Validações -->
-    <script src="../src/script.js"></script>
+    <script type="module" src="../src/script.js"></script>
     <script src="../src/modules/validacoes.js"></script>
 
       <!-- Modulos -->
