Movendo o index.html para a raíz.

--- a/index.html
+++ b/index.html
@@ -920,8 +920,8 @@
 
 <!-- Database SupaBase -->
  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
- <script type="module" src="../src/api/supabase.js"></script>
- <script type="module" src="../src/script.js"></script>
+ <script type="module" src="src/api/supabase.js"></script>
+ <script type="module" src="src/script.js"></script>
 
 
   </body>
